--- a/indexdesktop.css
+++ b/indexdesktop.css
@@ -3,14 +3,15 @@ body {
     height: 100vh;
     background-size: cover;
     background-position: center;
+    grid-template-rows: 10% 85% 5%;
+    display: grid;
+    grid-template-areas: "header"
+    "main"
+    "footer";
 }
-header {
-    max-width: 1200px;
-    margin: auto;
-}
+
 ul {
     float: right;
-    margin-top: 2em;
 }
 ul li {
     display: inline;
@@ -36,5 +37,18 @@ ul li a:hover {
     float: left;
     width: 15em;
     height: auto;
-    margin-top: 1em;
+}
+header {
+    background-color: black;
+    grid-area: header;
+}
+main {
+    padding-top: 10em;
+    color: white;
+    grid-area: main;
+}
+footer {
+    background-color: black;
+    color: white;
+    grid-area: footer;
 }
