--- a/indexmobile.css
+++ b/indexmobile.css
@@ -1,52 +1,29 @@
 * {
     font-family: helvetica;
+    
 }
 body {
-    background-image: url(../ASSIGNMENT/background.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    grid-template-rows: 10% 85% 5%;
     display: grid;
-    grid-template-areas: "header"
+    grid-template-columns: auto;
+    grid-template-rows: 10% 10% 75% 5%;
+    grid-template-areas: 
+    "header"
+    "nav"
     "main"
     "footer";
 }
-
-ul {
-    float: right;
-}
-ul li {
-    display: inline;
-}
-ul li a {
-    text-decoration: none;
-    color: white;
-    padding: 0.5em 1em;  
-    border: 0.1em solid transparent;
-}
-ul li a:hover {
-    background-color: white;
-    color: black;
-    transition: 0.7s ease;
-}
-.currenthomepage a {
-    background-color: white;
-    color: black;
-}
-
 .logo img{ 
     display: inline;
     float: left;
     width: 15em;
     height: auto;
 }
+
 header {
     background-color: black;
     grid-area: header;
 }
 main {
-    padding-top: 10em;
     color: white;
     grid-area: main;
 }
@@ -54,4 +31,38 @@ footer {
     background-color: black;
     color: white;
     grid-area: footer;
+}
+    
+nav {
+    grid-area: nav;
+
+}
+nav ul {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    text-align: center;
+    list-style: none;
+
+}
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    padding: 0.5em 1em;
+    border: 0.1em solid white transparent;
+    
+}
+nav ul li a:hover {
+    background-color: white;
+    color: black;
+    transition: 0.7s ease;
+}
+nav .close {
+    display: block;
+}
+body {
+    background-image: url(../ASSIGNMENT/backdrop.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    grid-area: div;
 }
