--- a/indexmobile.css
+++ b/indexmobile.css
@@ -32,33 +32,59 @@ footer {
     color: white;
     grid-area: footer;
 }
-    
-nav {
-    grid-area: nav;
+.openmenu {
+    position: relative;
+    height: 0.8em;
+    width: 1.25em;
+    display: block;
+    border-top: 0.2em solid white;
+    border-bottom: 0.2em solid white;
+    border-radius: 0.1em;
+    float: right;
 
+    
 }
+.openmenu:before {
+    content: '';
+    position: absolute;
+    width: 1.25em;
+    top: 0.3em;
+    left: 2empx;
+    border-top: 0.2em solid white;
+}
+nav {
+    background-color: black;
+    grid-area: nav;
+    display:none; 
+}   
+nav:target {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100vh;
+    z-index: 1;
+}
+nav .close {
+    float: right;
+}
+
 nav ul {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    text-align: center;
     list-style: none;
+    padding-top: 2em;
 
+}
+nav ul li {
+    padding-top: 2.5em;
+    
 }
 nav ul li a {
     text-decoration: none;
     color: white;
-    padding: 0.5em 1em;
-    border: 0.1em solid white transparent;
-    
 }
-nav ul li a:hover {
-    background-color: white;
-    color: black;
-    transition: 0.7s ease;
-}
-nav .close {
-    display: block;
-}
+
 body {
     background-image: url(../ASSIGNMENT/backdrop.jpg);
     height: 100vh;
