added padding to main & nav then set nav background color to gray

--- a/indexdesktop.css
+++ b/indexdesktop.css
@@ -29,7 +29,11 @@ header {
 main {
     color: white;
     grid-area: main;
+    padding-left: 10em;
+    padding-right: 25em;
+    padding-top: 7em;
 }
+
 footer {
     background-color: black;
     color: white;
@@ -37,7 +41,9 @@ footer {
 }
     
 nav {
+    background-color: gray;
     grid-area: nav;
+    padding-top: 1em;
 
 }
 nav ul {
