--- a/indexdesktop.css
+++ b/indexdesktop.css
@@ -1,7 +1,6 @@
 * {
     margin: 0%;
     padding: 0%;
-    font-family: helvetica;
     
 }
 body {
@@ -19,7 +18,6 @@ body {
     float: left;
     width: 15em;
     height: auto;
-    padding-left: 32em;
 }
 
 header {
@@ -33,17 +31,34 @@ main {
     padding-right: 25em;
     padding-top: 7em;
 }
+main .hello {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+main h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+main p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    padding-top: 1em;
+}
 
 footer {
     background-color: black;
     color: white;
     grid-area: footer;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 }
     
 nav {
-    background-color: gray;
+    background-color:	#696969;
     grid-area: nav;
     padding-top: 1em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 
 }
 nav ul {
