--- a/portfoliodesktop.css
+++ b/portfoliodesktop.css
@@ -6,7 +6,7 @@
 body {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 10% 10% 75% 5%;
+    grid-template-rows: auto;
     grid-template-areas: 
     "header"
     "nav"
@@ -27,7 +27,36 @@ header {
 main {
     color: white;
     grid-area: main;
+}
+main ul {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    text-align: center;
+    list-style: none;
+    padding-top: 3em;
+     
+}
+.database {
+    
+}
+.webdev {
+   
 
+}
+.software {
+   
+
+}
+.problemsolving {
+   
+
+}
+.communication {
+   
+
+}
+.systems {
+   
 
 }
 
@@ -43,8 +72,10 @@ nav {
     background-color:	#696969;
     grid-area: nav;
     padding-top: 1em;
+    padding-bottom: 1em;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
+    
 
 }
 nav ul {
