changed close menu color to red

--- a/indexmobile.css
+++ b/indexmobile.css
@@ -118,3 +118,7 @@ body {
     background-size: cover;
     background-position: center;
 }
+.close {
+    text-decoration: none;
+    color: red;
+}
