--- a/portfoliomobile.css
+++ b/portfoliomobile.css
@@ -47,6 +47,27 @@ main p {
 main ul li {
     list-style: none;
 }
+.webdev {
+    padding-top: 1em;
+
+}
+.software {
+    padding-top: 1em;
+
+}
+.problemsolving {
+    padding-top: 1em;
+   
+
+}
+.communication {
+    padding-top: 1em;
+   
+
+}
+.systems {
+    padding-top: 1em;
+}
 footer {
     background-color: black;
     color: white;
@@ -125,18 +146,18 @@ body {
     display: none;
     background-color: blue;
     position: fixed;
-    top: 0%;
-    left: 50%;
+    top: 25%;
+    left: 25%;
     width: 50%;
-    height: 100vh;
+    height: 50vh;
     z-index: 1;
 }
 .div1:target {
     display: block;
     position: fixed;
     top: 25%;
-    left: 25%;
-    width: 50%;
+    left: 0%;
+    width: 100%;
     height: 50vh;
     z-index: 1;
 }
@@ -155,8 +176,8 @@ body {
     display: block;
     position: fixed;
     top: 25%;
-    left: 25%;
-    width: 50%;
+    left: 0%;
+    width: 100%;
     height: 50vh;
     z-index: 1;
 }
@@ -175,8 +196,8 @@ body {
     display: block;
     position: fixed;
     top: 25%;
-    left: 25%;
-    width: 50%;
+    left: 0%;
+    width: 100%;
     height: 50vh;
     z-index: 1;
 }
@@ -195,8 +216,8 @@ body {
     display: block;
     position: fixed;
     top: 25%;
-    left: 25%;
-    width: 50%;
+    left: 0%;
+    width: 100%;
     height: 50vh;
     z-index: 1;
 }
@@ -215,8 +236,8 @@ body {
     display: block;
     position: fixed;
     top: 25%;
-    left: 25%;
-    width: 50%;
+    left: 0%;
+    width: 100%;
     height: 50vh;
     z-index: 1;
 }
@@ -235,7 +256,7 @@ body {
     display: block;
     position: fixed;
     top: 25%;
-    left: 25%;
+    left: 0%;
     width: 100%;
     height: 50vh;
     z-index: 1;
