changed 'close menu' to 'X' and customized it

--- a/indexmobile.css
+++ b/indexmobile.css
@@ -120,5 +120,10 @@ body {
 }
 .close {
     text-decoration: none;
-    color: red;
+    color: white;
+    font-family: 'Fredoka One', cursive;
+    font-size: 200%;
+    padding-right: 0.5em;
+    
+    
 }
