--- a/contactmobile.css
+++ b/contactmobile.css
@@ -109,3 +109,13 @@ body {
     font-size: 200%;
     padding-right: 0.5em;
 }
+form {
+    display: grid;
+    width: 400px;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    grid-gap: 0.5em;
+    }
+    .submit {
+    grid-column: 2;
+    }
