--- a/contactmobile.css
+++ b/contactmobile.css
@@ -119,16 +119,35 @@ body {
     font-size: 200%;
     padding-right: 0.5em;
 }
-form {
-    display: grid;
-    width: 200px;
-    grid-template-columns: 50% 50%;
-    align-items: center;
-    grid-gap: 0.5em;
-    padding-top: 10em;
-    padding-left: 10em;
-    padding-bottom: 10em;
-    }
-    .submit {
-    grid-column: 2;
-    }
+.contact-form {
+    max-width: 450px;
+    margin: auto;
+}
+.contact-form-text {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 16px 0;
+    border: 0;
+    background-color: black;
+    color: white;
+    padding: 20px 20px;  
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+textarea{
+    resize: none;
+    height: 12em;
+}
+.contact-form-button{
+    float: right;
+    padding: 0.5em 2em;
+    border-radius: 0.5em;
+    border: 0;
+    background-color: #696969;
+    
+}
+.contact-form-button:hover{
+    background-color: lightgray;
+    transition: 0.5s;
+}
