--- a/cvdesktop.css
+++ b/cvdesktop.css
@@ -49,6 +49,7 @@ nav {
     padding-top: 1em;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
+    padding-bottom: 1em;
 
 }
 nav ul {
