added module description to the different modules

--- a/portfoliodesktop.css
+++ b/portfoliodesktop.css
@@ -27,6 +27,7 @@ header {
 main {
     color: white;
     grid-area: main;
+    font-family: 'Montserrat', sans-serif;
 }
 main ul {
     display: grid;
@@ -36,9 +37,10 @@ main ul {
     padding-top: 3em;
      
 }
-main ul li p {
+main p {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+    padding-top: 1em;
+    
     
 }
 .problemsolving {
