--- a/portfoliomobile.css
+++ b/portfoliomobile.css
@@ -26,6 +26,7 @@ header {
 main {
     color: white;
     grid-area: main;
+    font-family: 'Montserrat', sans-serif;
     
 }
 main ul {
@@ -48,7 +49,6 @@ main h1 {
 }
 main p {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
     padding-top: 1em;
 }
 
@@ -147,19 +147,14 @@ body {
     display: none;
     background-color: blue;
     position: fixed;
-    top: 25%;
-    left: 25%;
-    width: 50%;
-    height: 50vh;
-    z-index: 1;
 }
 .div1:target {
     display: block;
     position: fixed;
-    top: 25%;
+    top: 10%;
     left: 0%;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     z-index: 1;
 }
 
@@ -167,19 +162,14 @@ body {
     display: none;
     background-color: blue;
     position: fixed;
-    top: 0%;
-    left: 50%;
-    width: 50%;
-    height: 100vh;
-    z-index: 1;
 }
 .div2:target {
     display: block;
     position: fixed;
-    top: 25%;
+    top: 10%;
     left: 0%;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     z-index: 1;
 }
 
@@ -187,19 +177,14 @@ body {
     display: none;
     background-color: blue;
     position: fixed;
-    top: 0%;
-    left: 50%;
-    width: 50%;
-    height: 100vh;
-    z-index: 1;
 }
 .div3:target {
     display: block;
     position: fixed;
-    top: 25%;
+    top: 10%;
     left: 0%;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     z-index: 1;
 }
 
@@ -207,19 +192,15 @@ body {
     display: none;
     background-color: blue;
     position: fixed;
-    top: 0%;
-    left: 50%;
-    width: 50%;
-    height: 100vh;
-    z-index: 1;
+
 }
 .div4:target {
     display: block;
     position: fixed;
-    top: 25%;
+    top: 10%;
     left: 0%;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     z-index: 1;
 }
 
@@ -227,19 +208,14 @@ body {
     display: none;
     background-color: blue;
     position: fixed;
-    top: 0%;
-    left: 50%;
-    width: 50%;
-    height: 100vh;
-    z-index: 1;
 }
 .div5:target {
     display: block;
     position: fixed;
-    top: 25%;
+    top: 10%;
     left: 0%;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     z-index: 1;
 }
 
@@ -247,19 +223,14 @@ body {
     display: none;
     background-color: blue;
     position: fixed;
-    top: 0%;
-    left: 50%;
-    width: 50%;
-    height: 100vh;
-    z-index: 1;
 }
 .div6:target {
     display: block;
     position: fixed;
-    top: 25%;
+    top: 10%;
     left: 0%;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     z-index: 1;
 }
 .close {
