--- a/contactdesktop.css
+++ b/contactdesktop.css
@@ -27,12 +27,12 @@ header {
 main {
     color: black;
     grid-area: main;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
 }
 main h2 {
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     font-size: 3em;  
 }
@@ -46,8 +46,8 @@ footer {
     background-color: black;
     color: white;
     grid-area: footer;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
 }
     
 nav {
@@ -55,8 +55,8 @@ nav {
     grid-area: nav;
     padding-top: 1em;
     padding-bottom: 1em;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
     
 
 }
@@ -103,7 +103,7 @@ body {
     background-color: black;
     color: white;
     padding: 20px 20px;  
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 textarea{
     resize: none;
