--- a/contactmobile.css
+++ b/contactmobile.css
@@ -27,11 +27,11 @@ header {
 main {
     color: black;
     grid-area: main;
-    font-family: 'Montserrat', sans-serif;  
+    font-family: 'Roboto', sans-serif;  
 }
 main h2 {
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     font-size: 3em;  
 }
@@ -43,8 +43,8 @@ footer {
     background-color: black;
     color: white;
     grid-area: footer;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
 }
 .openmenu {
     position: relative;
@@ -71,8 +71,8 @@ nav {
     background-color: black;
     grid-area: nav;
     display:none; 
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
 }   
 nav:target {
     display: block;
@@ -130,7 +130,7 @@ body {
     background-color: black;
     color: white;
     padding: 20px 20px;  
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 textarea{
     resize: none;
