changed footer item position

--- a/cvdesktop.css
+++ b/cvdesktop.css
@@ -41,6 +41,9 @@ footer {
     grid-area: footer;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
+    text-align: center;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
 }
     
 nav {
