--- a/cvmobile.css
+++ b/cvmobile.css
@@ -31,6 +31,9 @@ footer {
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
+    text-align: center;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
 }
 .openmenu {
     position: relative;
