--- a/indexmobile.css
+++ b/indexmobile.css
@@ -47,6 +47,9 @@ footer {
     grid-area: footer;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
+    text-align: center;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
 }
 .openmenu {
     position: relative;
