--- a/indexdesktop.css
+++ b/indexdesktop.css
@@ -27,21 +27,24 @@ header {
 main {
     color: white;
     grid-area: main;
-    padding-left: 10em;
-    padding-right: 25em;
     padding-top: 7em;
+    padding-left: 15em;
+    padding-right: 15em;
 }
 main .hello {
     font-family: 'Roboto', sans-serif;
+    text-align: center;
 }
 main h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 3em;
+    text-align: center;
 }
 main p {
     font-family: 'Nerko One', cursive;
     padding-top: 1em;
     font-size: 2em;
+    text-align: center;
 }
 
 footer {
