--- a/portfoliomobile.css
+++ b/portfoliomobile.css
@@ -140,7 +140,7 @@ body {
 }
 .div1 {
     display: none;
-    background-color: blue;
+    background-color: black;
     position: fixed;
 }
 .div1:target {
@@ -149,13 +149,14 @@ body {
     top: 10%;
     left: 0%;
     width: 100%;
-    height: 80vh;
+    height: 68vh;
     z-index: 1;
+    border-radius: 1em;
 }
 
 .div2 {
     display: none;
-    background-color: blue;
+    background-color: black;
     position: fixed;
 }
 .div2:target {
@@ -164,13 +165,14 @@ body {
     top: 10%;
     left: 0%;
     width: 100%;
-    height: 80vh;
+    height: 68vh;
     z-index: 1;
+    border-radius: 1em;
 }
 
 .div3 {
     display: none;
-    background-color: blue;
+    background-color: black;
     position: fixed;
 }
 .div3:target {
@@ -179,13 +181,14 @@ body {
     top: 10%;
     left: 0%;
     width: 100%;
-    height: 80vh;
+    height: 68vh;
     z-index: 1;
+    border-radius: 1em;
 }
 
 .div4 {
     display: none;
-    background-color: blue;
+    background-color: black;
     position: fixed;
 
 }
@@ -195,13 +198,14 @@ body {
     top: 10%;
     left: 0%;
     width: 100%;
-    height: 80vh;
+    height: 68vh;
     z-index: 1;
+    border-radius: 1em;
 }
 
 .div5 {
     display: none;
-    background-color: blue;
+    background-color: black;
     position: fixed;
 }
 .div5:target {
@@ -210,13 +214,14 @@ body {
     top: 10%;
     left: 0%;
     width: 100%;
-    height: 80vh;
+    height: 68vh;
     z-index: 1;
+    border-radius: 1em;
 }
 
 .div6 {
     display: none;
-    background-color: blue;
+    background-color: black;
     position: fixed;
 }
 .div6:target {
@@ -225,8 +230,9 @@ body {
     top: 10%;
     left: 0%;
     width: 100%;
-    height: 80vh;
+    height: 68vh;
     z-index: 1;
+    border-radius: 1em;
 }
 .close {
     text-decoration: none;
@@ -240,4 +246,5 @@ body {
     color: white;
     font-family: 'Fredoka One', cursive;
     font-size: 180%;
+    padding-left: 93%;
 }
