added navigation animation

--- a/portfoliomobile.css
+++ b/portfoliomobile.css
@@ -6,11 +6,6 @@ body {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
-    grid-template-areas: 
-    "header"
-    "nav"
-    "main"
-    "footer";
 }
 .logo img{ 
     display: inline;
@@ -21,11 +16,9 @@ body {
 
 header {
     background-color: black;
-    grid-area: header;
 }
 main {
     color: white;
-    grid-area: main;
     font-family: 'Roboto', sans-serif;
     
 }
@@ -69,7 +62,6 @@ main p {
 footer {
     background-color: black;
     color: white;
-    grid-area: footer;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     text-align: center;
@@ -98,10 +90,16 @@ footer {
 }
 nav {
     background-color: black;
-    grid-area: nav;
-    display:none; 
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
+    display:block; 
+    position: fixed;
+    top: 0%;
+    left: 50%;
+    width: 50%;
+    height: 100vh;
+    z-index: 1;
+    transform: translate(0, -100%);
 }   
 nav:target {
     display: block;
@@ -111,6 +109,8 @@ nav:target {
     width: 50%;
     height: 100vh;
     z-index: 1;
+    transform: translate(0, 0%);
+    transition: transform 0.4s ease-in;
 }
 nav .close {
     float: right;
