added more elements to the page and structured it

--- a/sitereportmobile.css
+++ b/sitereportmobile.css
@@ -99,7 +99,9 @@ nav ul li a {
 }
 
 main {
-    color: white;
+    color: black;
+    font-family: 'Roboto', sans-serif;
+    background-color: white;
 }
 
 
