--- a/sitereportmobile.css
+++ b/sitereportmobile.css
@@ -100,8 +100,125 @@ nav ul li a {
 
 main {
     color: black;
-    font-family: 'Roboto', sans-serif;
     background-color: white;
+    font-family: 'Roboto', sans-serif;
+    padding-left: 1em;
+}
+main h2{
+    padding-bottom: 0.5em;
+}
+main img{
+    text-align: left;
+    size: 1em;
+    width: 100%;
+    height: 100%;
+}
+
+main .moduleexperience{
+    padding-top: 1em;
+    padding-bottom: 2.5em;
+}
+.moduleexperience p{
+    padding-bottom: 0.2em;
+}
+.debug{
+    padding-top: 1.5em;
+}
+
+
+
+main .websitedesign{
+    padding-bottom: 2.5em;
+
+}
+.websitedesign p{
+    padding-bottom: 0.2em;
+}
+.theme{
+    padding-top: 1.5em;
+}
+.font{
+    padding-top: 1.5em;
+}
+.portfoliopagedesign{
+    padding-top: 1em;
+}
+.overalllayout{
+    padding-top: 1.5em;
+}
+
+
+main .relevantchanges p{
+    padding-bottom: 1.7em;
+}
+.indexss1{
+    text-align: center;
+    padding-bottom: 0.5em;
+}
+.indexss2{
+    text-align: center;
+    padding-bottom: 2.7em;
+}
+
+
+
+main .validationcentre h3{
+    padding-bottom: 1em;
+    text-align: center;
+}
+.intro{
+    padding-bottom: 0.5em;
+}
+.explain{
+    padding-bottom: 1em;
+}
+
+
+.homepagevalidation{
+    padding-bottom: 4em;
+    text-align: center;
+}
+.homepagevalidation img{
+    padding-bottom: 0.5em;
+}
+
+
+.portfoliopagevalidation{
+    padding-bottom: 4em;
+    text-align: center;
+}
+.portfoliopagevalidation img{
+    padding-bottom: 0.5em;
+}
+
+
+.contactpagevalidation{
+    padding-bottom: 4em;
+    text-align: center;
+}
+.contactpagevalidation img{
+    padding-bottom: 0.5em;
+}
+
+
+.cvpagevalidation{
+    padding-bottom: 4em;
+    text-align: center;
+}
+.cvpagevalidation img{
+    padding-bottom: 0.5em;
+}
+
+
+
+main .reference{
+    padding-top: 6em;
+}
+.reference p{
+    padding-bottom: 1em;
+}
+.reference h1{
+    padding-bottom: 0.5em;
 }
 
 
