--- a/sitereportdesktop.css
+++ b/sitereportdesktop.css
@@ -57,8 +57,7 @@ nav .close {
 }
 
 main {
-    color: black;
-    background-color: white;
+    color: white;
     font-family: 'Roboto', sans-serif;
     padding-left: 1em;
 }
