--- a/cvdesktop.css
+++ b/cvdesktop.css
@@ -27,7 +27,7 @@ header {
 }
 
 nav {
-    background-color:	#696969;
+    background-color:#696969;
     padding-top: 1em;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
@@ -70,7 +70,7 @@ main {
 
 
 main .cvleft{
-    background-color: #152238;
+    background-color: #202020;
 }
 .image img{
     height: 15em;
@@ -119,8 +119,7 @@ main .cvleft{
 
 
 main .cvright{
-    background-color: white;
-    color: black;
+    color: white;
 }
 .nameholder{
     text-align: center;
