--- a/sitereportmobile.css
+++ b/sitereportmobile.css
@@ -101,7 +101,8 @@ nav ul li a {
 main {
     color: white;
     font-family: 'Roboto', sans-serif;
-    padding-left: 0.3em;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
 }
 main h2{
     padding-bottom: 0.5em;
