--- a/cvdesktop.css
+++ b/cvdesktop.css
@@ -130,8 +130,12 @@ main .cvright{
 .profile{
     padding-top: 3em;
 }
+.profile h2{
+    border-bottom: 0.2em solid white;
+}
 .education{
     padding-top: 3em;
+    border-bottom: 0.2em solid white;
 }
 .welling{
     padding-bottom: 1em;
@@ -144,6 +148,7 @@ main .cvright{
 }
 .skills{
     padding-top: 2em;
+    border-bottom: 0.2em solid white;
 }
 .skillslist ul{
     padding-left: 1.5em;
